fixes to overflow

--- a/src/app.css
+++ b/src/app.css
@@ -50,9 +50,11 @@ a {
 }
 
 @media screen and (max-width: 700px){
+  body{
+    overflow-x: hidden;
+  }
   .section__padding{
       padding: 0;
-      overflow-x: hidden !important;
   }
   .section__margin{
       margin: 4rem;
@@ -60,9 +62,11 @@ a {
 }
 
 @media screen and (max-width: 550px){
+  body{
+    overflow-x: hidden;
+  }
   .section__padding{
       padding: 4rem 2rem;
-      overflow-x: hidden !important;
   }
   .section__margin{
       margin: 4rem 2rem;
