--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -6,7 +6,7 @@
     align-items: center;
     justify-content: space-between;
     padding: 6vmin;
-    position: fixed;
+    position: fixed !important;
     z-index: 3;
 }
 
